--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "axios": "^0.16.2",
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
+    "vee-validate": "^2.0.0-rc.17",
+    "velocity-animate": "^1.5.0",
     "vue": "^2.4.2",
     "vue-i18n": "^7.2.0",
+    "vue-notification": "^1.3.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0",
     "vuex-router-sync": "^4.2.0"
